CSS rules aplied

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <h1 id="title">the beer survey</h1>
-        <p id="description">In the next survey, we´re gonna test how much you know about beer</p>
+        <p id="description">In the next survey, we would test how much you know about beer.</p>
     </header>
     <main>
         <form action="#" id="survey-form">
-            <fieldset>
+            <fieldset class="botMargin">
                 <legend><h2>Allow us to know something about you:</h2></legend>
 
                 <label for="name" id="name-label">Name: </label><br>
@@ -83,13 +83,22 @@
                 <legend><h2>Please, tell us. What do you know about beer?</h2></legend>
                 
                 <label for="feedback">
-                    <textarea name="feedback" id="feedback" cols="50" rows="10" placeholder="I know everything about beer!"></textarea>
+                    <textarea name="feedback" id="feedback" cols="50" rows="7" placeholder="I know everything about beer!"></textarea>
                 </label>
             </fieldset>
             
             <input type="submit" value="Send Beer Survey" id="submit">
         </form>
     </main>
+
+    <footer>
+        <p>
+            This project was made by <a href="https://www.linkedin.com/in/ricardozarroca" target="_blank">Ricardo Zarroca</a>, to get the FreeCodeCamp´s Responsive Web Certification.   
+        </p>
+        <p>
+            If you want, check my <a href="https://github.com/rzarroca">gitHub portfolio</a> for more projects like this.
+        </p>
+    </footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
